deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py4castR
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py4castR
  template:
    metadata:
      labels:
        app: py4castR
    spec:
      containers:
        - name: py4castR
          image: avouacr/py4castr:latest
