deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: py4astR
spec:
  ports:
    - name: http
      targetPort: 8181
      port: 80
  selector:
    app: py4castR
