deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py4castR
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - py4castR.lab.sspcloud.fr
  rules:
    - host: py4castR.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py4castR
                port:
                  number: 80
